push to new heroku

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                  <div class="container">
                     <div class="row">
                       <div class="col-md-6 col-sm-12">
-                        <img style="height:35%;max-width:400px" src="<%= post.featured_image %>">
+                        <img style="height:35%;max-width:400px;" src="<%= post.featured_image %>">
                       </div>
                       <div class="col-md-6 col-sm-12">
                          <p style="color:gray;text-decoration:none"><%= post.summary %> <br><br> 
