--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@
       }
   
     p {
-      font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-      font-size: 1.25em;
+      font-family: 'Ubuntu', sans-serif, Times, serif;
+      font-size: 1.95em;
       line-height: 1.58;
       margin-bottom: 1.25em;
       font-weight: 400;
