--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,14 @@
         <hr>
         <% posts.forEach(function(post) { %>
             <a href="/blog/<%= post.slug %>">
-                 <h2 class="ml-2"><%= post.title %></h2>
+                 <h2 class="ml-2" style="font-family:'kanit', sans-serif;color:gray;text-decoration:none;margin-bottom:15px"><%= post.title %></h2>
                  <div class="container">
                     <div class="row">
-                      <div class="col-md-6 col-sm-12">
-                        <img style="height:35%;max-width:400px;" src="<%= post.featured_image %>">
+                      <div class="col-md-12 col-sm-12">
+                        <img style="min-height:45%;width:80%;margin-bottom:15px;margin-left:0%" src="<%= post.featured_image %>">
                       </div>
-                      <div class="col-md-6 col-sm-12">
-                         <p style="color:gray;text-decoration:none"><%= post.summary %> <br><br> 
+                      <div class="col-md-12 col-sm-12">
+                         <p style="color:gray;text-decoration:none;font-size:1.25em;font-family:'kanit', sans-serif;"><%= post.summary %> <br><br> 
                          Author : <%= post.author.first_name %> <%= post.author.last_name %>
                         </p>
                       </div>
