--- a/views/templates/postHeader.ejs
+++ b/views/templates/postHeader.ejs
@@ -2,11 +2,7 @@
 
     <div class="container">
         <div class="navbar-header">
-            <a href="/blog" class="navbar-brand" style="font-size:24px"><-  Back</a></div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="home.html">Home</a></li>
-            </ul>
-        </div>
+            <a href="/blog" class="navbar-brand" style="font-size:24px;text-decoration:none;margin-left:25rem;"><i class="fas fa-home"></i> Back Home</a></div>
+            <hr>
     </div>
 </div>
