--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -42,12 +42,12 @@ function changetitle(){
  //change title here
 
  if(count%2===0) {
-    title.innerText = 'Imran says hi';
+    title.innerHTML = 'Imran says hi';
     console.log(count);
     count++;
   }
    if(count%2!=0) {
-    title.innerText = 'DevHoot | Blogs';
+    title.innerHTML = 'DevHoot | Blogs';
     console.log(count);
     count--;
   }
