--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -46,7 +46,7 @@ function changetitle(){
     console.log(count);
     count++;
   }
-   if(count%2!=0) {
+   if(count===3) {
     title.innerHTML = 'DevHoot | Blogs';
     console.log(count);
     count--;
