removed title change loop

--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -29,32 +29,32 @@
 <link href="../../main.css" rel="stylesheet" type="text/ejs">
 
 <!-- Code to switch between different titles in browser tab -->
-<script>
+// <script>
 
 
-window.setInterval(function(){
-    changetitle()
-},10000); //every 10 seconds
-let title = document.querySelector('title');
-let count = 2;
+// window.setInterval(function(){
+//     changetitle()
+// },10000); //every 10 seconds
+// let title = document.querySelector('title');
+// let count = 2;
 
-function changetitle(){
- //change title here
+// function changetitle(){
+//  //change title here
 
- if(count%2===0) {
-    title.innerHTML = 'Imran says hi';
-    console.log(count);
-    count++;
-  }
-   if(count===3) {
-    title.innerHTML = 'DevHoot | Blogs';
-    console.log(count);
-    count--;
-  }
-   if(count>1){
-     window.setInterval(function(){
-    changetitle()
-},10000); //every 10 seconds
-   }
-}
-</script>
+//  if(count%2===0) {
+//     title.innerHTML = 'Imran says hi';
+//     console.log(count);
+//     count++;
+//   }
+//    if(count===3) {
+//     title.innerHTML = 'DevHoot | Blogs';
+//     console.log(count);
+//     count--;
+//   }
+//    if(count>1){
+//      window.setInterval(function(){
+//     changetitle()
+// },10000); //every 10 seconds
+//    }
+// }
+// </script>
