--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -29,7 +29,8 @@
 <link href="../../main.css" rel="stylesheet" type="text/ejs">
 
 <!-- Code to switch between different titles in browser tab -->
-// <script>
+
+ <script>
 
 
 // window.setInterval(function(){
@@ -57,4 +58,4 @@
 // },10000); //every 10 seconds
 //    }
 // }
-// </script>
+</script>
