--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,10 +6,13 @@
 
     <div class="container main">
       <div class="col-sm-12">  
-        <h2 style="font-family:'kanit',sans-serif">
+      <div class="row">
+        <h2 style="font-family:'kanit',sans-serif" class="col-sm-12">
             <%= post.title %>
         </h2>
-
+      </div>  
+    <div class="row">
+      <div class="col-sm-12 col-xs-12">
         Published
         <%= published.getDate() %>/
             <%= published.getMonth()+1 %>/
@@ -25,7 +28,8 @@
                             </span>
                             <% }); %>
                                 <% } %>
-
+          </div>                      
+        </div>     
                                     <br>
 
                                    <span style="color:gray;font-family:'kanit',sans-serif"><img style="max-height:45px;"
@@ -35,7 +39,7 @@
 
                                         <br><br>
 
-                                            <div style="font-family:'kanit',sans-serif">
+                                            <div style="font-family:'kanit',sans-serif;color:##292929;max-width:800px;min-width:auto;font-size:1.4em" id="body">
                                                 <%- post.body %>
                                             </div>
                                          </div>
