--- a/views/templates/postHead.ejs
+++ b/views/templates/postHead.ejs
@@ -41,6 +41,7 @@
     <link rel="shortcut icon" type="image/jpeg" href="https://devhoot.herokuapp.com/images/myAvatar.jpeg" />
 
 <!-- styles -->
+<base href="/">
 <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -48,4 +49,5 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="../../main.css" rel="stylesheet" type="text/ejs">
+<link href="../../main.css" rel="stylesheet" type="text/css">
+<link href="../../public/style.css" rel="stylesheet" type="text/css">
