--- a/views/templates/postHeader.ejs
+++ b/views/templates/postHeader.ejs
@@ -2,7 +2,7 @@
 
     <div class="container">
         <div class="navbar-header">
-            <a href="/blog" class="navbar-brand" style="font-size:24px;text-decoration:none;margin-left:25rem;"><i class="fas fa-home"></i> Back Home</a></div>
+            <a href="/blog" class="navbar-brand" style="font-size:24px;text-decoration:none"><i class="fas fa-home"></i> Back Home</a></div>
             <hr>
     </div>
 </div>
