--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         <hr>
         <% posts.forEach(function(post) { %>
             <a href="/blog/<%= post.slug %>">
-                 <h2 class="ml-2" style="font-family:'kanit', sans-serif;text-decoration:none;margin-bottom:15px"><%= post.title %></h2>
+                 <h2 class="ml-2" style="font-family:'kanit', sans-serif;color:#292929;text-decoration:none;margin-bottom:15px"><%= post.title %></h2>
                  <div class="container">
                     <div class="row">
                       <div class="col-md-12 col-sm-12">
