--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,10 +1,17 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
 
-    <div class="container">
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="home.html">Home</a></li>
-            </ul>
-        </div>
-    </div>
+<div class="container">
+<nav class="navbar fixed-bottom navbar-light bg-light">
+  <a class="navbar-brand" href="www.devhoot.ooo"><i class="fas fa-home"></i> Back to Home</a>
+</nav>
 </div>
+<style>
+   .navbar-brand {
+       padding-left: 42vw;
+   }
+
+   @media screen and (max-width:800px) {
+       .navbar-brand {
+       padding-left: 22vw;
+   }   
+   }
+</style>
