--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,7 +1,7 @@
 
 <div class="container">
 <nav class="navbar fixed-bottom navbar-light bg-light">
-  <a class="navbar-brand" href="www.devhoot.ooo"><i class="fas fa-home"></i> Back to Home</a>
+  <a class="navbar-brand" href="devhoot" method="get"><i class="fas fa-home"></i> Back to Home</a>
 </nav>
 </div>
 <style>
