--- a/views/templates/postHeader.ejs
+++ b/views/templates/postHeader.ejs
@@ -1,7 +1,7 @@
 
 <div class="container">
 <nav class="navbar fixed-bottom navbar-light bg-light">
-  <a class="navbar-brand" href="/blog"><i class="fas fa-home"></i> Back to Home</a>
+  <a class="navbar-brand" href="/blog"><i class="fas fa-home"></i> Back to Blog</a>
 </nav>
 </div>
 <style>
