--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -14,6 +14,20 @@
         });
     </script>
 
+     <!--  Twitter Cards -->
+    <meta name="twitter:card" content="DevHoot Blogs"></meta>
+    <meta name="twitter:site" content="@DevHoot"></meta>
+    <meta name="twitter:creator" content="Imran Khan" />
+    <!-- Open Graph protocol markup -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Blogs">
+    <meta property="og:image" content="https://devhoot.herokuapp.com/images/myAvatar.jpeg">
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:site_name" content="DevHoot">
+    <meta property="og:url" content="https://devhoot-blog.herokuapp.com/blog" />
+    <meta property="og:description" content="Tech, Reviews, News, Trends.">
+
+
     <!-- favicon -->
     <link rel="shortcut icon" type="image/jpeg" href="images/myAvatar.jpeg" />
     <link rel="shortcut icon" type="image/jpeg" href="https://devhoot.herokuapp.com/images/myAvatar.jpeg" />
