--- a/views/templates/postHead.ejs
+++ b/views/templates/postHead.ejs
@@ -15,7 +15,7 @@
        <!--  Twitter Cards -->
     <meta name="twitter:card" content="<%= post.summary %>"></meta>
     <meta name="twitter:site" content="@DevHoot"></meta>
-    <meta name="twitter:creator" content="<%= post.author %>`" />
+    <meta name="twitter:creator" content="<%= post.author.first_name %>" />
     <!-- Open Graph protocol markup -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="<% post.title %>">
