--- a/views/post.ejs
+++ b/views/post.ejs
@@ -43,6 +43,10 @@
                                                 <%- post.body %>
                                             </div>
                                             <style>
+
+                                            #body {
+                                                margin-bottom: 200px;
+                                            }
                                             @media screen and (max-width:800px) {
                                                 #body p img  {
                                                   height: 25vw;
