--- a/views/templates/postFooter.ejs
+++ b/views/templates/postFooter.ejs
@@ -7,7 +7,7 @@
         crossorigin="anonymous"></script>
 
 <!-- Disquss -->
-<div id="disqus_thread"></div>
+<div class="container" id="disqus_thread"></div>
 <script>
 
 /**
