--- a/views/templates/postFooter.ejs
+++ b/views/templates/postFooter.ejs
@@ -28,3 +28,6 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <script id="dsq-count-scr" src="//devhoot-blog.disqus.com/count.js" async></script>                            
+
+<!-- Share widget-->
+<script src="//platform-api.sharethis.com/js/sharethis.js#property=5b73d239cf37800012d863b5&product=sticky-share-buttons"></script>
