--- a/views/post.ejs
+++ b/views/post.ejs
@@ -44,6 +44,10 @@
                                             </div>
                                             <style>
 
+                                            .main {
+                                                margin-top: 100px;
+                                            }
+
                                             #body {
                                                 margin-bottom: 100px;
                                             }
