--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -8,3 +8,5 @@
 
 
     
+    <!-- Share widget-->
+<script src="//platform-api.sharethis.com/js/sharethis.js#property=5b73d239cf37800012d863b5&product=sticky-share-buttons"></script>
