--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,6 +1,6 @@
 
 <div class="container">
-<nav class="navbar fixed-bottom navbar-light bg-light">
+<nav class="navbar fixed-top navbar-dark bg-dark">
   <a class="navbar-brand" href="devhoot" method="get"><i class="fas fa-home"></i> Back to Home</a>
 </nav>
 </div>
