--- a/views/templates/postHeader.ejs
+++ b/views/templates/postHeader.ejs
@@ -1,6 +1,6 @@
 
 <div class="container">
-<nav class="navbar fixed-top navbar-light bg-light">
+<nav class="navbar fixed-top navbar-dark bg-dark">
   <a class="navbar-brand" href="/blog"><i class="fas fa-home"></i> Back to Blog</a>
 </nav>
 </div>
