twitter cards bug fix

--- a/views/templates/postHead.ejs
+++ b/views/templates/postHead.ejs
@@ -6,10 +6,9 @@
 
 <!-- SEO tags -->
     <meta name="description" content="<%= post.meta_description %>">
-    <meta name="keywords" content="Web development tutorials, labs, code labs, 
-    Imran,Imran-Khan,imran khan,imran,Imran Khan,web Developer, programmer, software, engineer, IT,
-     computer,devhoot,dev,hoot,devHoot,Dev Hoot, Devhoot Dev hoot,developer, India developer, india web
-      developer,india,vadodara,gujarat,asia,earth, Video courses, online learning,e-learning, front-end, back end, full stack dev, free tutorials,
+    <meta name="keywords" content="Web development tutorials, code labs, 
+    Imran Khan,web Developer, programmer, software, engineer, IT,
+     computer,devhoot,Devhoot,india,vadodara,gujarat,asia, Video courses,e-learning, front-end, back end, full stack dev, free tutorials,
       free code labs">
 
        <!--  Twitter Cards -->
