--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -14,6 +14,13 @@
         });
     </script>
 
+    <!-- SEO-->
+    <meta name="description" content="Tech, Reviews, News, Trends.">
+     <meta name="keywords" content="Web development tutorials, code labs, 
+    Imran Khan,web Developer, programmer, software, engineer, IT,
+     computer,devhoot,Devhoot,india,vadodara,gujarat,asia, Video courses,e-learning, front-end, back end, full stack dev, free tutorials,
+      free code labs">
+
      <!--  Twitter Cards -->
     <meta name="twitter:card" content="DevHoot Blogs">
     <meta name="twitter:site" content="@DevHoot">
