--- a/views/templates/head.ejs
+++ b/views/templates/head.ejs
@@ -6,14 +6,14 @@
 
  <title>Devhoot | Blogs</title>
  <!-- AdSense -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
+       <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+        (adsbygoogle = window.adsbygoogle |
+        .| []).push({
             google_ad_client: "ca-pub-9779862910631944",
             enable_page_level_ads: true
         });
-    </script>
-
+        </script>
     <!-- SEO-->
     <meta name="description" content="Tech, Reviews, News, Trends.">
      <meta name="keywords" content="Web development tutorials, code labs, 
