--- a/views/templates/postHead.ejs
+++ b/views/templates/postHead.ejs
@@ -28,13 +28,14 @@
     <title><%= post.title%></title>
 
     <!-- AdSense -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+        (adsbygoogle = window.adsbygoogle |
+        .| []).push({
             google_ad_client: "ca-pub-9779862910631944",
             enable_page_level_ads: true
         });
-    </script>
+        </script>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/jpeg" href="images/myAvatar.jpeg" />
